[gd_scene load_steps=9 format=3 uid="uid://ibrej4iou3kv"]

[ext_resource type="Script" path="res://unit.gd" id="1_gf726"]
[ext_resource type="Texture2D" uid="uid://bdv515uqv4wiw" path="res://_sprites/resource_icons/Weapon & Tool/Silver Sword.png" id="2_31vib"]
[ext_resource type="Script" path="res://_scripts/world_object.gd" id="2_dfa36"]
[ext_resource type="Script" path="res://_scenes/prefabs/unit_navigator.gd" id="3_64u8x"]
[ext_resource type="PackedScene" uid="uid://nlup42k1sgdo" path="res://_scenes/prefabs/selectable.tscn" id="3_ibxw7"]
[ext_resource type="PackedScene" uid="uid://bu8fvflbob7sy" path="res://_scenes/prefabs/range.tscn" id="6_c0o8j"]

[sub_resource type="Resource" id="Resource_oj8nk"]
script = ExtResource("2_dfa36")
name = "Swordsman"
desc = "A Swordsman"

[sub_resource type="CircleShape2D" id="CircleShape2D_7bs4s"]
radius = 8.0

[node name="Swordsman" type="CharacterBody2D"]
collision_layer = 4096
collision_mask = 0
script = ExtResource("1_gf726")
object_data = SubResource("Resource_oj8nk")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_31vib")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7bs4s")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." node_paths=PackedStringArray("body")]
avoidance_enabled = true
debug_enabled = true
script = ExtResource("3_64u8x")
body = NodePath("..")

[node name="Selectable" parent="." instance=ExtResource("3_ibxw7")]

[node name="Walkover" parent="." instance=ExtResource("6_c0o8j")]
collision_layer = 0
collision_mask = 24576

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_velocity_computed_from_navigation_agent_2d"]
[connection signal="sig_detect_enter" from="Walkover" to="." method="_sig_detect_enter_from_walkover"]
[connection signal="sig_detect_exit" from="Walkover" to="." method="_sig_detect_exit_from_walkover"]
